# Classifit

./: .dockerignore  .gitignore  .slugignore  Dockerfile  README.md  app.py  deploy.sh  packages.txt  pyproject.toml  requirements.txt  requirements_full.txt  requirements_streamlit.txt  run_app.py  streamlit_app.py
.streamlit/: config.toml
saved_model/: fingerprint.pb  saved_model.pb
saved_model/variables/: variables.index
tfjs_model/: model.json
