[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classifit"
version = "2.0.0"
description = "AI-powered image classification using deep learning"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pillow>=10.0.0,<11.0.0", 
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "plotly>=5.0.0,<6.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "altair>=5.0.0,<6.0.0",
    "watchdog>=3.0.0,<4.0.0",
]

[tool.streamlit]
python = "3.10" 